refactor(): 입력값 유효성 코드 수정 공백 유효성 검사 함수 수정 - input.trim().isEmpty()를 isBlanck()로 수정하였습니다.